fixed article shift when opening sidebar

--- a/Myriad/wwwroot/css/myriad.21.07.13.css
+++ b/Myriad/wwwroot/css/myriad.21.07.13.css
@@ -349,7 +349,7 @@ header{width:100%;height:5rem;position:fixed;top:0px;left:0px;background-color:#
 @media only screen and (min-width:1025px) and (max-width:1280px){
 
 /*HORIZONTAL SPACING */
-article{width:53rem;padding-left:5rem;}
+article{width:47rem;padding-left:5rem;}
 #menuSpacer{width:35rem;}
 .hidden + #editTabs {margin-left:5rem;}
 article.withsidebar{padding-left:0;}
@@ -358,22 +358,22 @@ article.withsidebar{padding-left:0;}
 @keyframes opensidebar{from{padding-left:5rem;}to{padding-left:0rem;}}
 .withoutsidebar{animation-name: closesidebar; animation-duration:.2s;}
 @keyframes closesidebar{from{padding-left:0rem;}to{padding-left:5rem;}}
-.readingverse {position:absolute;left:9.5rem;}
+.readingverse {position:absolute;left:6.5rem;}
 article.opening .readingverse {animation-name: sidebarreadingverse; animation-duration:.2s;}
-article.withsidebar .readingverse {animation: none; left: 4.5rem;}
-@keyframes sidebarreadingverse{from{left:9.5rem;}to{left:4.5rem;}}
+article.withsidebar .readingverse {animation: none; left: 1.5rem;}
+@keyframes sidebarreadingverse{from{left:6.5rem;}to{left:1.5rem;}}
 article.withoutsidebar .readingverse {animation-name: closesidebarverse; animation-duration:.2s;}
-@keyframes closesidebarverse{from{left:4.5rem;}to{left:9.5rem;}}
-.firstpoetic .readingverse  {position:absolute;left:10.5rem;}
-.poetic .readingverse  {position:absolute;left:10.5rem;}
+@keyframes closesidebarverse{from{left:1.5rem;}to{left:6.5rem;}}
+.firstpoetic .readingverse  {position:absolute;left:7.5rem;}
+.poetic .readingverse  {position:absolute;left:7.5rem;}
 article.opening .firstpoetic .readingverse {animation-name: sidebarpoeticverse; animation-duration:.2s;}
 article.opening .poetic .readingverse {animation-name: sidebarpoeticverse; animation-duration:.2s;}
-article.withsidebar .firstpoetic .readingverse {position:absolute;left:5.5rem;}
-article.withsidebar .poetic .readingverse {position:absolute;left:5.5rem;}
-@keyframes sidebarpoeticverse{from{left:10.5rem;}to{left:5.5rem;}}
+article.withsidebar .firstpoetic .readingverse {position:absolute;left:2.5rem;}
+article.withsidebar .poetic .readingverse {position:absolute;left:2.5rem;}
+@keyframes sidebarpoeticverse{from{left:7.5rem;}to{left:2.5rem;}}
 article.withoutsidebar p.firstpoetic .readingverse {animation-name: closesidebarpoeticverse; animation-duration:.2s;}
 article.withoutsidebar p.poetic .readingverse {animation-name: closesidebarpoeticverse; animation-duration:.2s;}
-@keyframes closesidebarpoeticverse{from{left:5.5rem;}to{left:10.5rem;}}
+@keyframes closesidebarpoeticverse{from{left:2.5rem;}to{left:7.5rem;}}
 
 figure.portrait, figure.square, .sidenote{width:26rem}
 .searchResults{width:40rem;}
@@ -381,7 +381,8 @@ figure.portrait, figure.square, .sidenote{width:26rem}
 .indexicon img{right: 13rem;}
 #ellipsis{right:10rem;}
 /*Left*/
-.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-left:5rem;}
+.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, 
+.scripture ul.tabs, .scripture-section{margin-left:2rem;}
 table{margin-left:5.25rem;}
 .Tabs .tab li {margin-left:1rem;}
 .nav{margin-left:.5rem;}
@@ -392,7 +393,8 @@ article.withsidebar .sidenote p{margin-left: 2rem;}
 
  .menu {margin-left: 12rem;}
 /*Right*/
-.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, .scripture ul.tabs, .scripture-section{margin-right:5rem;}
+.comment, #chaptertext p, #comments p, searchResults p, definitionBlock details, 
+.scripture ul.tabs, .scripture-section{margin-right:2rem;}
 .flexTabs .tab li {margin-right:1rem;}
 .textquote{margin-right:8rem;}
 
@@ -407,7 +409,7 @@ article.withsidebar .sidenote p{margin-left: 2rem;}
 @media only screen and (min-width:900px) and (max-width:1024px){
 
 /*HORIZONTAL SPACING */
-article{width:50rem;padding-left:3rem;}
+article{width:50rem;padding-left:1rem;}
 #menuSpacer{width:30rem;}
 .hidden + #editTabs {margin-left:3rem;}
 .withsidebar{animation: none;}
@@ -415,7 +417,7 @@ article{width:50rem;padding-left:3rem;}
 .readingverse {position:absolute;left:5rem;}
 .firstpoetic .readingverse  {position:absolute;left:6rem;}
 .poetic .readingverse  {position:absolute;left:6rem;}
-article.withsidebar{padding-left:3rem;animation:none;}
+article.withsidebar{padding-left:1rem;animation:none;}
 article.withsidebar .readingverse {position:absolute;left:5rem;animation:none;}
 article.withsidebar p.firstpoetic .readingverse  {position:absolute;left:6rem;animation:none;}
 article.withsidebar p.poetic .readingverse  {position:absolute;left:6rem;animation:none;}
@@ -448,7 +450,7 @@ figure.portrait, figure.square, .sidenote{width:21rem}
 @media only screen and (min-width:768px) and (max-width:899px){
 
 /*HORIZONTAL SPACING */
-article{width:45rem;padding-left:1rem;}
+article{width:45rem;padding-left:.5rem;}
 #menuSpacer{width:25rem;}
 .hidden + #editTabs {margin-left:1rem;}
 .withsidebar{animation: none;}
@@ -456,7 +458,7 @@ article{width:45rem;padding-left:1rem;}
 .readingverse {position:absolute;left:3rem;}
 .firstpoetic .readingverse  {position:absolute;left:4rem;}
 .poetic .readingverse  {position:absolute;left:4rem;}
-article.withsidebar{padding-left:1rem;animation:none;}
+article.withsidebar{padding-left:.5rem;animation:none;}
 article.withsidebar .readingverse {position:absolute;left:3rem;animation:none;}
 article.withsidebar p.firstpoetic .readingverse  {position:absolute;left:4rem;animation:none;}
 article.withsidebar p.poetic .readingverse  {position:absolute;left:4rem;animation:none;}
@@ -511,11 +513,11 @@ body{text-rendering:optimizeSpeed;}
 /*HORIZONTAL SPACING */
 img.portrait {float:none;}
 figure, figure.portrait, figure.square {margin-left:auto;margin-right:auto;}
-article{width:33rem;padding-left:1rem;}
+article{width:33rem;padding-left:.5rem;}
 .readingverse {position:absolute;left:2rem;}
 .firstpoetic .readingverse  {position:absolute;left:3rem;}
 .poetic .readingverse  {position:absolute;left:3rem;}
-article.withsidebar{padding-left:1rem;animation:none;}
+article.withsidebar{padding-left:.5rem;animation:none;}
 article.withsidebar .readingverse {position:absolute;left:2rem;animation:none;}
 article.withsidebar p.firstpoetic .readingverse  {position:absolute;left:3rem;animation:none;}
 article.withsidebar p.poetic .readingverse  {position:absolute;left:3rem;animation:none;}
@@ -586,8 +588,8 @@ body{text-rendering:optimizeSpeed;}
 /*HORIZONTAL SPACING */
 img.portrait {float:none;}
 figure, figure.portrait, figure.square {margin-left:auto;margin-right:auto;}
-article{width:20rem;padding-left:1rem;}
-article.withsidebar{padding-left:1rem;animation:none;}
+article{width:20rem;padding-left:.25rem;}
+article.withsidebar{padding-left:.25rem;animation:none;}
 article.withsidebar .readingverse {animation:none;}
 article.withsidebar p.firstpoetic .readingverse  {animation:none;}
 article.withsidebar p.poetic .readingverse  {animation:none;}
